--- a/星巴克/css/common.css
+++ b/星巴克/css/common.css
@@ -2,9 +2,12 @@
     margin: 0;
     padding: 0;
 }
+a{
+    text-decoration: none ;
+}
 #header{
     display: -webkit-box;
-    height: 10px;
+    height: 100px;
     box-shadow: 0 -5px 5px 5px rgba(0,0,0,0.1);
     margin-top: 3px;
 }
@@ -64,13 +67,13 @@
 }
 @media screen and (max-width:768px){
     #menu .menu-nav{
-        padding-left:15px;
+        padding-left:1px;
     }
     #menu p{
         font-size: 12px;
     }
     #user-info{
-        padding-right:10px;
+        padding-right:1px;
     }
     #user-info p{
         font-size: 12px;
