--- a/星巴克/css/common.css
+++ b/星巴克/css/common.css
@@ -7,10 +7,12 @@ a{
 }
 li{
     list-style: none;
+
 }
 #header{
     display: -webkit-box;
     height: 100px;
+    width: 1px;
     box-shadow: 0 -5px 5px 5px rgba(0,0,0,0.1);
     margin-top: 3px;
 }
