--- a/webpack/src/css/index.css
+++ b/webpack/src/css/index.css
@@ -1,3 +1,10 @@
 body{
     background-image:url('../images/991px.jpg')
 }
+.aa{
+    width: 100px;
+    height: 100px;
+}
+.bb{
+    width: 100px;
+}
